CU-8r21gb - fix dark mode page issuse

--- a/src/app/pages/editcomment/editcomment.page.scss
+++ b/src/app/pages/editcomment/editcomment.page.scss
@@ -122,4 +122,12 @@
         background-color: #2e2f4e;
         color: #ffffff;
     }
+
+    ion-item {
+        .channel-row {
+            ion-label{
+            color: #fff;
+         }
+      }
+   }
 }
